--- a/src/scss/core/_base.scss
+++ b/src/scss/core/_base.scss
@@ -53,5 +53,13 @@ h1, h2 {
 }
 
 p {
-   font-family: $font-family;
+   // font-family: $font-family;
+   font-family: $font-family-heading;
+   font-style: normal;
+   font-weight: normal;
+   font-size: 24px;
+   line-height: 28px;
+
+   color: #7A4093;
+
 }
