--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,84 +1,31 @@
-/// Footer ------------------------ //
-.social-link2 li a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-top: 0;
-}
-
-.contact_block_icon i {
-    top: auto;
-}
-.contact_section {
-    margin-bottom: 30px;
-}
-
-.footer_section {
-    padding-top: 50px;
-    margin-left: calc(-100vw / 2 + 100% / 2);
-    margin-right: calc(-100vw / 2 + 100% / 2);
-    max-width: 100vw;
-    width: 100vw;
-}
-.footer_prebottom {
-    padding-bottom: 15px;
-}
-.footer_bottom {
-    padding: 15px 0;
-}
-.footer_section .contact_block .contact_block_icon span {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-/*  Footer
------------------*/
+/*  Footer -----------------*/
 .footer {
-    padding: 114px 0 34px;
-    background-color: #151a1d;
-    a {
-        color: white;
-        &:hover {
-            color: $color-red;
-        }
+    background-color: white;
+    position: relative;
+    background-image: url('../images/bgFooter.png') ;
+    &::before {
+      content:url('../images/bgFooter.png'); /* with class ModalCarrot ??*/
+      position:absolute; /*or absolute*/
+      left:0;
+      right: 0;
+      top:0;
+      width: 100%;
     }
-    ul {
-        padding-left: 0;
-        li {
-            list-style: none;
-            list-style-type: none;
-        }
-    }
-    &__item-content {
-        display: flex;
-    }
-    &__item {
+    &__floating {
+        position: absolute;
     }
     &__title {
-        font-size: 18px;
-        font-weight: bold;
-        color: $color-red;
-        text-transform: uppercase;
-        margin-bottom: 35px;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 24px;
+        line-height: 28px;
+        text-align: center;
+        color: #FFFFFF;
     }
-    &__links {
-    }
-    &__icon {
-        color: $color-red;
-        &--direction {
-        }
-        &--phone {
-        }
-        &--email {
-        }
+    &__logoWrap {
+
     }
     &__social {
-    }
-    &__logo {
-    }
-    &__end {
-        color: #fff;
-        text-align: center;
+
     }
 }
