--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,36 +1,77 @@
 /*  Hero
 -----------------*/
 .hero {
-    background-image: url(../images/hero.png);
-    color: var(--color-white);
-    min-height: 818px;
-    display: flex;
-    align-items: flex-end;
-    padding: 60px 0;
+  background: linear-gradient(180deg, #59a9cb -23.39%, #efe3d6 90.35%);
+  padding-top: 380px;
+  padding-bottom: 288px;
+  &__cloudWrap {
+    position: absolute;
+    left: 59px;
+    top: 107px;
+  }
+  &__cloudBigWrap {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  &__content {
+    margin-left: 0;
+    max-width: 600px;
+  }
+  &__title {
+    font-style: normal;
+    font-size: 72px;
+    line-height: 84px;
+    font-weight: normal;
+    color: #ffffff;
+    span {
+      font-weight: bold;
+    }
+  }
+  &__description {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
 
-    &__image-content {
-        display: flex;
-        margin-bottom: 100px;
-    }
-    &__image {
-        flex: auto;
-        width: 200px;
-    }
-    &__content {
-    }
-    &__title {
-        @include responsive(fz, 48, 40);
-        margin-bottom: 26px;
-        text-transform: uppercase;
-        font-weight: bold;
-    }
-    &__subtitle {
-        @include responsive(fz,30);
-        margin-bottom: 30px;
-        text-transform: uppercase;
-        font-weight: bold;
-    }
-    &__description {
-        font-size: 18px;
-    }
+    color: #FFFFFF;
+  }
+  &__womanWrap {
+    position: absolute;
+    right: 264px;
+    bottom: 500px;
+  }
+
+  // background-image: url(../images/hero.png);
+  // color: var(--color-white);
+  // min-height: 818px;
+  // display: flex;
+  // align-items: flex-end;
+  // padding: 60px 0;
+
+  // &__image-content {
+  //     display: flex;
+  //     margin-bottom: 100px;
+  // }
+  // &__image {
+  //     flex: auto;
+  //     width: 200px;
+  // }
+  // &__content {
+  // }
+  // &__title {
+  //     @include responsive(fz, 48, 40);
+  //     margin-bottom: 26px;
+  //     text-transform: uppercase;
+  //     font-weight: bold;
+  // }
+  // &__subtitle {
+  //     @include responsive(fz,30);
+  //     margin-bottom: 30px;
+  //     text-transform: uppercase;
+  //     font-weight: bold;
+  // }
+  // &__description {
+  //     font-size: 18px;
+  // }
 }
