--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,17 +9,19 @@
 /* Core --------------------- */
 
 @import './vendor/normalize.min.scss';
-@import './vendor/bootstrap/bootstrap-grid.scss';
-@import './vendor/fontawesome5/solid.scss';
-@import './vendor/fontawesome5/regular.scss';
-@import './vendor/fontawesome5/brands.scss';
+// @import './vendor/bootstrap/bootstrap-grid.scss';
+@import './vendor/bootstrap/bootstrap.scss';
+// @import './vendor/fontawesome5/solid.scss';
+// @import './vendor/fontawesome5/regular.scss';
+// @import './vendor/fontawesome5/brands.scss';
 @import './vendor/fontawesome5/fontawesome.scss';
-@import './vendor/aos.scss';
+// @import './vendor/aos.scss';
 
 /* Core --------------------- */
 
 @import './core/base';
 @import './core/typography';
+@import './core/globals';
 
 /* Components ------------------ */
 
@@ -39,6 +41,7 @@
 
 /* Views --------------------- */
 
+@import './pages/home';
 @import './pages/main';
 @import './pages/custom';
 
