--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -10,6 +10,16 @@
     top:-170px;
     width: 100%;
   }
+
+  &::after {
+    content:url('../images/ola.png');
+    position:absolute;
+    z-index:8;
+    left:0;
+    right: 0;
+    bottom:calc(100% - 6px);
+    width: 100%;
+  }
 }
 
 .tyMain {
